--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,7 @@
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "mini-css-extract-plugin": "^2.3.0",
-    "node-sass": "^9.0.0",
+    "sass": "^1.84.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^3.3.0",
     "webpack": "^5.76.0",
