--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,25 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: src/dist
+          clean: truename: Deploy to GitHub Pages
+
+on:
+  push:
+    branches:
+      - master # or main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v3
       
       - name: Setup Node.js
