--- a/src/package.json
+++ b/src/package.json
@@ -4,21 +4,25 @@
   "description": "A simple, responsive, single-page portfolio and resume for developers built with Bulma, Sass, Font Awesome and Flickity.",
   "main": "webpack.config.js",
   "repository": "https://github.com/mmacneil/devfolio",
-  "author": "Mark Macneil",
+  "author": "Tom Lausberg",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development"
   },
   "devDependencies": {
     "bulma": "^0.9.3",
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.3.0",
     "sass": "^1.84.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^3.3.0",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.8.0"
+    "webpack": "^5.98.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
     "flickity": "^2.2.2",
